# competitive-programming-tester-cli

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  macros.rs  main.rs  program_data.rs  test_data.rs  todo
src/commands/: add.rs  config.rs  list.rs  remove.rs  rename.rs  run.rs
