[package]
name = "cp-tester"
version = "1.0.4"
edition = "2021"
authors = ["Alok Swaminathan <swaminathanalok@gmail.com>"]
license = "MIT"
description = "A command line tool to test competitive programming problems quickly and locally"
readme = "README.md"
homepage = "https://github.com/AlokSwaminathan/competitve-programming-tester-cli"
repository = "https://github.com/AlokSwaminathan/competitve-programming-tester-cli"
keywords = ["cli", "competitive"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
dirs = "5.0.1"
dropbox-sdk = "0.17.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tabled = "0.14.0"
tempfile = "3.6.0"
wait-timeout = "0.2.0"
zip = "0.6.6"
